--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -1,6 +1,6 @@
 # This workflow will install Basix, FFCx, DOLFINx and run the DOLFINx unit tests.
 
-name: Basix CI
+name: Basix/DOLFINX CI
 
 on: pull_request
 
@@ -29,7 +29,8 @@ jobs:
         run: |
           cmake -G Ninja -B build-dir -S .
           cmake --build build-dir
-          sudo cmake --install build-dir
+          cmake --install build-dir
+          cd python
           python3 -m pip install ./python
       - name: Install FEniCS Python components
         run: |
