--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -36,14 +36,19 @@ jobs:
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install git+https://github.com/FEniCS/ffcx.git
 
+      - name: Get Basix and install
+        uses: actions/checkout@v2
+        with:
+          path: ./dolfinx
+          repository: FEniCS/dolfinx
+          ref: garth/basix-cmake
+
       - name: Clone and install DOLFINx
         run: |
-          git clone https://github.com/FEniCS/dolfinx.git
-          cd dolfinx
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S cpp/
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/pp/
           cmake --build build
           cmake --install build
-          python3 -m pip -v install --global-option build --global-option --debug python/
+          python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
 
       - name: Run DOLFINx unit tests
         run: python3 -m pytest -n=auto dolfinx/python/test/unit
