--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -36,19 +36,19 @@ jobs:
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install git+https://github.com/FEniCS/ffcx.git
 
-      - name: Get Basix and install
+      - name: Get DOLFINX
         uses: actions/checkout@v2
         with:
           path: ./dolfinx
           repository: FEniCS/dolfinx
           ref: garth/basix-cmake
 
-      - name: Clone and install DOLFINx
+      - name: Install DOLFINX
         run: |
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/pp/
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/cpp/
           cmake --build build
           cmake --install build
           python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
 
-      - name: Run DOLFINx unit tests
-        run: python3 -m pytest -n=auto dolfinx/python/test/unit
+      - name: Run DOLFINX unit tests
+        run: python3 -m pytest -n auto dolfinx/python/test/unit
