--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -51,4 +51,4 @@ jobs:
           python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
 
       - name: Run DOLFINX unit tests
-        run: python3 -m pytest -n auto dolfinx/python/test/unit
+        run: python3 -m pytest -v -n auto dolfinx/python/test/unit
