--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: [3.x]
+        os: [ubuntu-20.04, macos-latest]
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
