--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -29,10 +29,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y doxygen libeigen3-dev libopenblas-dev liblapack-dev ninja-build
-      - name: Build documentation (Linux)
+      - name: Build C++ documentation (Linux)
         if: runner.os == 'Linux'
         run: |
-          cd doc && doxygen
+          cd cpp/doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install eigen ninja
@@ -49,6 +49,10 @@ jobs:
         run: |
           cd python
           pip install .
+      - name: Build Python documentation (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          cd python/doc && make html
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy
@@ -67,11 +71,11 @@ jobs:
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
           git rm -r basix/main/cpp
-          mkdir -p basix/main/cpp
-          cp -r ../cpp/doc/html/* basix/main/cpp/
           git rm -r basix/main/python
+          mkdir -p basix/main/cpp
           mkdir -p basix/main/python
-          cp -r ../python/doc/html/* basix/main/python/
+          cp -r ../cpp/doc/html/* basix/main/cpp
+          cp -r ../python/doc/html/* basix/main/python
           git add --all
           git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
           git push
