--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -49,15 +49,14 @@ jobs:
         run: |
           cd python
           pip install .
+      - name: Build Python documentation (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          cd python/doc && make html
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy
           pytest -v -n auto --durations 20 test/
-      - name: Build Python documentation (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          cd python && pip install .
-          cd doc && make html
       - name: Checkout FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && github.ref == 'refs/heads/main' && runner.os == 'Linux' }}
         uses: actions/checkout@v2
