--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -72,3 +72,38 @@ jobs:
           git add --all
           git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
           git push
+
+  build:
+    name: Build and test without developer mode
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        python-version: [3.8]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install pybind11
+        run:
+          pip install pybind11
+      - name: Install dependencies (non-Python, Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y doxygen libeigen3-dev libopenblas-dev liblapack-dev ninja-build
+      - name: Install basix C++
+        run: |
+          cmake -G Ninja -B build-dir -S .
+          cmake --build build-dir
+          sudo cmake --install build-dir
+      - name: Build basix Python
+        run: |
+          cd python
+          pip install .
+      - name: Run units tests
+        run: |
+          pip install pytest pytest-xdist numpy sympy
+          pytest -v -n auto --durations 20 test/
