--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -35,10 +35,10 @@ jobs:
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install eigen ninja
-      - name: Lint with flake8
-        run: |
-          pip install flake8
-          flake8 --statistics test/
+      # - name: Lint with flake8
+      #   run: |
+      #     pip install flake8
+      #     flake8 --statistics test/
       - name: Install basix C++
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S .
