--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -94,7 +94,7 @@ jobs:
           sudo apt-get install -y libeigen3-dev libopenblas-dev liblapack-dev ninja-build
       - name: Install Basix
         run: |
-          cmake -G Ninja -B build-dir -S .
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -B build-dir -S .
           cmake --build build-dir
           sudo cmake --install build-dir
           cd python
