--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,18 +27,18 @@ jobs:
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install -y doxygen libeigen3-dev libopenblas-dev liblapack-dev ninja-build
+          sudo apt-get install -y doxygen libopenblas-dev liblapack-dev ninja-build
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
           cd doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install eigen ninja
-      # - name: Lint with flake8
-      #   run: |
-      #     pip install flake8
-      #     flake8 --statistics test/
+        run: brew install ninja
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 --statistics test/
       - name: Install basix C++
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S .
